# judinfo

./: .gitignore  LICENSE  README.en.md  README.md  config.py  judinfo_cli.py  judinfo_web.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.py  test_icons.py
.github/: copilot-instructions.md
static/: script.js  style.css
templates/: index.html
tests/: test_judinfo_cli.py
